interface for ESP wifi module added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,8 @@ dependencies {
     implementation 'com.github.GoodieBag:ProtractorView:v1.2'
     implementation 'com.github.Triggertrap:SeekArc:v1.1'
 
+    implementation "com.squareup.okhttp3:okhttp:$rootProject.okHttpVersion"
+
     implementation "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterKnifeVersion"
 
