--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
 name-template: 'PSLab Version $NEXT_PATCH_VERSION'
-tag-template: v$NEXT_PATCH_VERSION
+tag-template: 'v$NEXT_PATCH_VERSION'
 change-template: '- $TITLE (#$NUMBER) - @$AUTHOR'
 categories:
   - title: ':rocket: Features and Enhancements'
@@ -7,11 +7,11 @@ categories:
       - 'Feature'
       - 'Enhancement'
   - title: ':bug: Bug Fixes'
-    label: 'Bug'
+    label: 'Fix'
   - title: ':wrench: Maintenance'
-    labels:
-      - 'Chore'
-      - 'Documentation'
+    label: 'Chore'
+  - title: ':page_facing_up: Documentation'
+    label: 'Documentation'
 template: |-
     ## Changes
     $CHANGES
