wave generator ui changed (#1943)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,7 +84,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.WaveGeneratorActivity"
-            android:screenOrientation="userLandscape" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.AccelerometerActivity"
             android:screenOrientation="portrait" />
