feat: Dust Sensor (#1986)
update: limits

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,9 @@
             android:name=".activity.GasSensorActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".activity.MapsActivity" />
+        <activity
+            android:name=".activity.DustSensorActivity"
+            android:screenOrientation="portrait"/>
 
         <receiver android:name=".receivers.USBDetachReceiver" />
 
